--- a/package.json
+++ b/package.json
@@ -23,46 +23,46 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.8-a3",
-    "@jimengio/dropdown": "^0.1.16",
+    "@jimengio/doc-frame": "^0.1.8",
+    "@jimengio/dropdown": "^0.1.19",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-basics": "^0.0.1",
-    "@jimengio/jimo-icons": "^0.3.0",
-    "@jimengio/meson-modal": "^0.2.21",
+    "@jimengio/jimo-basics": "^0.0.3",
+    "@jimengio/jimo-icons": "^0.3.1",
+    "@jimengio/meson-modal": "^0.3.1",
     "@jimengio/router-code-generator": "^0.2.5",
     "@jimengio/ruled-router": "^0.2.21",
     "@jimengio/safe-property": "^0.0.2",
     "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.12",
+    "@types/node": "^12.12.14",
     "@types/prettier": "^1.19.0",
-    "@types/react": "^16.9.13",
+    "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
     "@types/react-transition-group": "^4.2.3",
-    "antd": "^3.25.2",
+    "antd": "^3.26.0",
     "cache-loader": "^4.1.0",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.2.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "file-loader": "^4.3.0",
-    "fork-ts-checker-webpack-plugin": "^3.1.0",
+    "file-loader": "^5.0.2",
+    "fork-ts-checker-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
-    "http-server": "^0.11.0",
+    "http-server": "^0.12.0",
     "immer": "^5.0.0",
     "prettier": "^1.19.1",
-    "raw-loader": "^3.1.0",
+    "raw-loader": "^4.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "style-loader": "^1.0.0",
+    "style-loader": "^1.0.1",
     "thread-loader": "^2.1.3",
     "ts-loader": "^6.2.1",
-    "ts-node": "^8.5.2",
+    "ts-node": "^8.5.4",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.7.2",
+    "typescript": "^3.7.3",
     "typescript-styled-plugin": "^0.15.0",
-    "url-loader": "^2.3.0",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
