--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@jimengio/dropdown": "^0.1.22",
     "@jimengio/fa-icons": "^0.2.0",
     "@jimengio/jimo-basics": "^0.0.8",
-    "@jimengio/jimo-icons": "^0.3.2-a1",
+    "@jimengio/jimo-icons": "^0.3.3",
     "@jimengio/meson-modal": "^0.3.2",
     "@jimengio/router-code-generator": "^0.2.5",
     "@jimengio/ruled-router": "^0.2.22",
@@ -35,32 +35,32 @@
     "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "^12.12.18",
+    "@types/node": "^13.1.0",
     "@types/prettier": "^1.19.0",
-    "@types/react": "^16.9.16",
+    "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-transition-group": "^4.2.3",
-    "antd": "^3.26.3",
+    "antd": "^3.26.4",
     "cache-loader": "^4.1.0",
     "css-loader": "^3.3.2",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^5.0.2",
-    "fork-ts-checker-webpack-plugin": "^3.1.1",
+    "fork-ts-checker-webpack-plugin": "^4.0.0-beta.4",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "http-server": "^0.12.0",
-    "immer": "^5.0.1",
+    "immer": "^5.1.0",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "style-loader": "^1.0.1",
+    "style-loader": "^1.1.1",
     "thread-loader": "^2.1.3",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.7.3",
+    "typescript": "^3.7.4",
     "typescript-styled-plugin": "^0.15.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.3",
@@ -82,8 +82,8 @@
     "react-dom": "*"
   },
   "dependencies": {
-    "dayjs": "1.8.17",
-    "emotion": "10.0.23",
+    "dayjs": "1.8.18",
+    "emotion": "10.0.27",
     "font-awesome": "^4.7.0",
     "is": "*",
     "lodash-es": "^4.17.15",
