--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.4.22",
+  "version": "0.5.0-a1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@ant-design/icons": "^4.0.5",
     "@jimengio/doc-frame": "^0.1.12",
     "@jimengio/dropdown": "^0.1.38",
     "@jimengio/fa-icons": "^0.2.0",
@@ -39,7 +40,7 @@
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
     "@types/react-transition-group": "^4.4.0",
-    "antd": "^3.26.18",
+    "antd": "^4.1.1",
     "cache-loader": "^4.1.0",
     "css-loader": "^3.6.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
