--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.4.14",
+  "version": "0.4.15-a1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
