--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.4.15",
+  "version": "0.4.16-a1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -72,7 +72,7 @@
     "@jimengio/jimo-icons": "*",
     "@jimengio/meson-modal": ">=0.2.16",
     "@jimengio/safe-property": "*",
-    "antd": "^3.18.2",
+    "antd": "^3.26.9",
     "immer": "*",
     "moment": "^2.24.0",
     "react": "*",
