--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@jimengio/jimo-basics": "^0.1.5",
     "@jimengio/jimo-icons": "^0.3.11",
     "@jimengio/meson-modal": "^0.3.8",
+    "@jimengio/rex": "^0.1.8",
     "@jimengio/router-code-generator": "^0.2.7",
     "@jimengio/ruled-router": "^0.2.25",
     "@jimengio/safe-property": "^0.0.2",
