--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.4.21-a5",
+  "version": "0.4.21-a6",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -24,13 +24,14 @@
     "@jimengio/doc-frame": "^0.1.12",
     "@jimengio/dropdown": "^0.1.38",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-basics": "^0.1.5",
+    "@jimengio/jimo-basics": "^0.1.10-a1",
     "@jimengio/jimo-icons": "^0.3.11",
-    "@jimengio/meson-modal": "^0.3.8",
+    "@jimengio/meson-modal": "^0.3.10",
     "@jimengio/rex": "^0.1.8",
     "@jimengio/router-code-generator": "^0.2.7",
     "@jimengio/ruled-router": "^0.2.25",
     "@jimengio/safe-property": "^0.0.2",
+    "@jimengio/flex-styles": "^0.2.0-a1",
     "@types/is": "^0.0.21",
     "@types/lodash-es": "^4.17.3",
     "@types/node": "^14.0.13",
@@ -73,6 +74,7 @@
     "@jimengio/jimo-icons": "*",
     "@jimengio/meson-modal": ">=0.2.16",
     "@jimengio/safe-property": "*",
+    "@jimengio/flex-styles": "^0.2.0-a1",
     "antd": "^3.18.2",
     "immer": "*",
     "moment": "^2.24.0",
