remove validateMethods, make use of validateRules

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-dom": "*"
   },
   "dependencies": {
+    "@jimengio/ruled-validator": "^0.1.1-a1",
     "lodash-es": "^4.17.15",
     "use-immer": "^0.4.0"
   }
